--- a/src/main/resources/templates/page/query-rule.html
+++ b/src/main/resources/templates/page/query-rule.html
@@ -49,6 +49,12 @@
 								</div>
 							</div>
 							<div class="layui-inline">
+								<label class="layui-form-label" style="width: 130px;">[[#{PAGE.REMARK}]]</label>
+								<div class="layui-input-inline" style="width: 200px;">
+									<input type="text" name="remark" class="layui-input">
+								</div>
+							</div>
+							<div class="layui-inline">
 								<label class="layui-form-label" style="width: 130px;">[[#{PAGE.REGULAR_TYPE}]]</label>
 								<div class="layui-input-inline" style="width: 200px;">
 									<select name="regularType">
@@ -82,7 +88,6 @@
 									</select>
 								</div>
 							</div>
-							<div class="layui-inline" style="width: 230px;"></div>
 							<div class="layui-inline">
 								<button type="submit" class="layui-btn layui-btn-normal" lay-submit
 									lay-filter="data-search-btn"><i class="layui-icon"></i>
