--- a/src/main/resources/templates/page/rule-market.html
+++ b/src/main/resources/templates/page/rule-market.html
@@ -250,6 +250,7 @@
 				}
 
 				if (obj.event === 'download') {
+					let loadingIndex = layer.load(0, { time: 10 * 1000 });
 					let params = [];
 					let i = 0;
 					try {
@@ -268,6 +269,7 @@
 						return false;
 					}
 					requestUtil.postJson("/ruleMarket/client/download", JSON.stringify(params), (res) => {
+						layer.close(loadingIndex);
 						layer.msg(res.msg);
 						table.reload('currentTableId', {
 							page: {
