update version to v2.6.4

--- a/src/main/resources/templates/page/change-password.html
+++ b/src/main/resources/templates/page/change-password.html
@@ -28,6 +28,15 @@
                         <div class="layui-card-body">
                             <div class="layui-form layuimini-form">
                                 <div class="layui-form-item">
+                                    <label class="layui-form-label required">[[#{PAGE.USERNAME}]]</label>
+                                    <div class="layui-input-inline" style="width: 60%;">
+                                        <input type="text" name="username" id="username" lay-verify="required"
+                                            th:lay-reqtext="#{PAGE.USERNAME_CAN_NOT_BE_NULL}"
+                                            th:placeholder="#{PAGE.PLEASE_INPUT_USERNAME}" value=""
+                                            class="layui-input">
+                                    </div>
+                                </div>
+                                <div class="layui-form-item">
                                     <label class="layui-form-label required">[[#{PAGE.OLD_PASSWORD}]]</label>
                                     <div class="layui-input-inline" style="width: 60%;">
                                         <input type="password" name="old_password" lay-verify="required"
@@ -81,6 +90,8 @@
                 miniTab = layui.miniTab,
                 requestUtil = layui.requestUtil;
 
+            document.getElementById('username').value = localStorage.username;
+
             //监听提交
             form.on('submit(saveBtn)', function (data) {
                 if (data.field.again_password != data.field.new_password) {
@@ -90,6 +101,7 @@
 
                 requestUtil.postForm("/adminUser/changePassword",
                     {
+                        newUsername: data.field.username,
                         oldPassword: hex_hmac_md5("password", data.field.old_password),
                         newPassword: hex_hmac_md5("password", data.field.new_password)
                     }
@@ -97,6 +109,7 @@
                         if (200 == data.code) {
                             requestUtil.postForm("/adminUser/logout", "", (data) => {
                                 if (200 == data.code) {
+                                    localStorage.removeItem('username');
                                     localStorage.removeItem('password');
                                     top.location.href = '/page/login?lang=' + localStorage.lang;
                                 }
